--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aiohttp
 https://github.com/New-dev0/Telethon/archive/diamond.zip
 html_telegraph_poster
-lxml[html_clean]
+lxml_html_clean
 python-decouple
 psutil
 pymediainfo
