--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python=3.10.15-slim-bullseye
+python==3.10.15-slim-bullseye
 aiohttp
 https://github.com/New-dev0/Telethon/archive/diamond.zip
 html_telegraph_poster
